--- a/_columns/The_Big_Picture/zh-cn/2024-11-26.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-26.md
@@ -28,8 +28,8 @@ After a pullback, Amazon is back in a buy zone from a 201.20 alternative entry. 
 回调后，亚马逊从 201.20 的替代入场点回到买入区域。（它在 11 月 1 日的 195.37 句柄条目中名列前茅。Microsoft 在试图突破下跌趋势时突破了几个短期移动平均线。Meta Platforms 仅比其高点低 5%，因为它形成了一个平坦的基础。Meta 试图收复其 50 天移动平均线，但收盘价略低于该线。
 
 
-Stock Market Today 今日股市
------------------------
+Stock Market Today
+------------------
 
 
 Among the S&P 500's 11 sectors, the Utilities Select Sector SPDR ETF ([XLU](https://research.investors.com/quote.aspx?symbol=XLU)) was by far the day's best performer, up 1.6%. The ETF hit an all-time high and is still near an 82.50 entry.  
@@ -39,16 +39,13 @@ Among the S&P 500's 11 sectors, the Utilities Select Sector SPDR ETF ([XLU](http
 ![](https://www.investors.com/wp-content/uploads/2024/11/MP112624.jpg)
 
 
-Despite the gains, declining stocks outnumbered advancers on the NYSE by nearly 2-to-1. The ratio was less than 2-to-1 negative on the Nasdaq.  
-尽管上涨，但下跌的股票数量与纽约证券交易所上涨的股票数量之差接近 2 比 1。纳斯达克的比率低于 2 比 1。
+Despite the gains, declining stocks outnumbered advancers on the NYSE by nearly 2-to-1. The ratio was less than 2-to-1 negative on the Nasdaq.  
 
 
-The Dow Jones industrials made it five up days in a row, paring a 0.7% morning loss to a gain of 0.3% by the close. It also made a record closing high. A sell-off in **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) was offset by strength in Amazon and Microsoft. Amgen shares closed off lows but still fell nearly 5% after the company reported good, but not good enough, trial results for its highly anticipated [weight-loss drug, MariTide](https://www.investors.com/news/technology/amgen-stock-weight-loss-drug-maritide-eli-lilly-zepbound/).  
-道琼斯工业指数连续五天上涨，收盘时收盘时下跌 0.7%，上涨 0.3%。它还创下了创纪录的收盘新高。**安进** （[AMGN）](https://research.investors.com/quote.aspx?symbol=AMGN) 的抛售被亚马逊和 Microsoft 的强劲抵消。安进股价收于低点，但仍下跌近 5%，此前该公司报告了其备受期待[的减肥药 MariTide](https://www.investors.com/news/technology/amgen-stock-weight-loss-drug-maritide-eli-lilly-zepbound/) 的良好但不够好的试验结果。
+The Dow Jones industrials made it five up days in a row, paring a 0.7% morning loss to a gain of 0.3% by the close. It also made a record closing high. A sell-off in **Amgen** ([AMGN](https://research.investors.com/quote.aspx?symbol=AMGN)) was offset by strength in Amazon and Microsoft. Amgen shares closed off lows but still fell nearly 5% after the company reported good, but not good enough, trial results for its highly anticipated [weight-loss drug, MariTide](https://www.investors.com/news/technology/amgen-stock-weight-loss-drug-maritide-eli-lilly-zepbound/).  
 
 
-The stock market shrugged off comments from President-elect Donald Trump late Monday, who said he would impose a 25% tax on all products entering the country from Canada and Mexico. He also announced an additional 10% tariff on goods from China. Tariffs could dramatically raises prices for American consumers who have already been dealing with inflation. ETFs tracking Mexico, Canada and China stocks fell.  
-股市周一晚些时候对当选总统唐纳德·特朗普的评论不屑一顾，特朗普表示，他将对从加拿大和墨西哥进入该国的所有产品征收25%的税。他还宣布对来自中国的商品加征 10% 的关税。关税可能会大幅提高已经在应对通货膨胀的美国消费者的价格。追踪墨西哥、加拿大和中国股市的 ETF 下跌。
+The stock market shrugged off comments from President-elect Donald Trump late Monday, who said he would impose a 25% tax on all products entering the country from Canada and Mexico. He also announced an additional 10% tariff on goods from China. Tariffs could dramatically raises prices for American consumers who have already been dealing with inflation. ETFs tracking Mexico, Canada and China stocks fell.  
 
 
 PCE In Stock Market's FocusPCE 是股票市场的焦点
@@ -80,8 +77,7 @@ With so many stocks out of position and well-extended past proper entry points, 
 ---
 
 
-**[See Which Stocks Are In The Leaderboard Model Portfolio  
-查看排行榜模型投资组合中有哪些股票](https://leaderboard.investors.com/#/)**
+**[See Which Stocks Are In The Leaderboard Model Portfolio](https://leaderboard.investors.com/#/)** 
 
 
 
@@ -89,8 +85,7 @@ With so many stocks out of position and well-extended past proper entry points, 
 ---
 
 
-In the insurance sector, **Chubb** ([CB](https://research.investors.com/quote.aspx?symbol=CB)) is forming a flat base and could try to break out of a downtrend soon. But it has a weak [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/) of 63. The big leaders in the group are **Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) and **Goosehead Insurance** ([GSHD](https://research.investors.com/quote.aspx?symbol=GSHD)). Buying the true leaders in a group on pullbacks is a generally better strategy than buying a laggard breakout.  
-在保险板块，**Chubb** （[CB）](https://research.investors.com/quote.aspx?symbol=CB) 正在形成平坦的基础，并可能很快尝试突破下跌趋势。但它的[相对强度评分](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/)很弱，只有 63。该集团的主要领导者是 **Lemonade** （[LMND）](https://research.investors.com/quote.aspx?symbol=LMND) 和 **Goosehead Insurance** （[GSHD）。](https://research.investors.com/quote.aspx?symbol=GSHD)在回调时买入一组真正的领导者通常比买入落后的突破更好。
+In the insurance sector, **Chubb** ([CB](https://research.investors.com/quote.aspx?symbol=CB)) is forming a flat base and could try to break out of a downtrend soon. But it has a weak [Relative Strength Rating](https://www.investors.com/how-to-invest/investors-corner/how-to-invest-in-stocks-relative-strength/) of 63. The big leaders in the group are **Lemonade** ([LMND](https://research.investors.com/quote.aspx?symbol=LMND)) and **Goosehead Insurance** ([GSHD](https://research.investors.com/quote.aspx?symbol=GSHD)). Buying the true leaders in a group on pullbacks is a generally better strategy than buying a laggard breakout.  
 
 
 **Western Digital** ([WDC](https://research.investors.com/quote.aspx?symbol=WDC)) rallied sharply for the second straight session and closed just below a 73.50 entry. New buyers are watching to see if Western Digital can break out of a cup-with-handle base. But the stock's [relative strength line](https://www.investors.com/how-to-invest/investors-corner/growth-stocks-breakout-specialty-tool-relative-strength-line/) is lagging badly on the weekly chart.  
@@ -106,7 +101,7 @@ Homebuilders lagged after strong gains Monday. After plunging more than 14 basis
 
 
 **Palo Alto Networks** ([PANW](https://research.investors.com/quote.aspx?symbol=PANW)) is an example of a recent breakout that still looks actionable. The security software bellwether is getting support at its 21-day exponential moving average as it holds in a buy zone from an alternate entry of 384.  
-**Palo Alto Networks** （[PANW](https://research.investors.com/quote.aspx?symbol=PANW)） 是最近突围的一个例子，看起来仍然可操作。安全软件风向标在其 21 天指数移动平均线获得支撑，因为它处于 384 的备选条目的买入区域。
+**Palo Alto Networks** （[PANW](https://research.investors.com/quote.aspx?symbol=PANW)） 是最近突围的一个例子，看起来仍然可操作。安全软件风向标在其 21 天指数移动平均线处获得支撑，因为它处于 384 的备选条目的买入区域。
 
 
 [View the General Market Indicators chart page here](https://www.investors.com/wp-content/uploads/2024/11/DailyGMI_112624.pdf).  
