--- a/_columns/The_Big_Picture/zh-cn/2024-11-27.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-27.md
@@ -113,11 +113,11 @@ The Fed tends to put more weight on core PCE, which removes food and energy pric
 
 
 Initial claims for unemployment benefits stayed at [213,000 the most recent week](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top), below the 217,000 estimate culled by Econoday. The revised [third-quarter GDP climbed 2.8%](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits), same as in the initial estimate and equal with forecasts.  
-最近一周初请失业金人数保持在 [213,000](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top) 人，低于 Econoday 估计的 217,000 人。修正后的[第三季度 GDP 增长 2.8%，](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits)与初步估计相同，与预测相同。
+最近一周初请失业金人数保持在 [213,000](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top) 人，低于 Econoday 估计的 217,000 人。修正后的[第三季度 GDP 增长 2.8%，](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits)与初步估计相同，与预测持平。
 
 
 Bond traders [raised the odds](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html) of a quarter-point rate cut at the Fed's December meeting to 70% vs. about 60% on Tuesday. Those odds crept higher the past week.  
-债券交易员将美联储 12 月会议上降息 25 个基点[的几率提高](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)到 70%，而周二的概率约为 60%。过去一周，这些赔率逐渐上升。
+债券交易员将美联储 12 月会议上降息 25 个基点的[几率提高](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)到 70%，而周二的概率约为 60%。过去一周，这些赔率逐渐上升。
 
 
 
