--- a/_columns/The_Big_Picture/zh-cn/2024-11-29.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-29.md
@@ -97,7 +97,7 @@ In contrast, generic drug stocks, office supply retailers, oil-and-gas royalty t
 
 
 [This Sector Leader On 300% Run Eyes Fresh Buy Point  
-这家 300% Run 的行业领导者将目光投向新的买入点](https://www.investors.com/stock-lists/sector-leaders/stock-market-sector-leader-buy-point-accelerating-earnings-impinj-nvidia/)
+这家 300% Run 的行业领导者关注新的买入点](https://www.investors.com/stock-lists/sector-leaders/stock-market-sector-leader-buy-point-accelerating-earnings-impinj-nvidia/)
 
 
 [AI Stock Holds An Nvidia-Like Gain. This Is Why.  
