--- a/_columns/The_Big_Picture/zh-cn/2024-12-02.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-02.md
@@ -20,42 +20,52 @@ The Nasdaq composite clearly led with a 1% lift to 19,403, ending not far from i
 
 
 
-Stock Market Today
-------------------
+Stock Market Today 今日股市
+-----------------------
 
 
-The Nasdaq 100, which showcases the 100 largest nonfinancial companies on that exchange, rose 1.1%. That easily beat a gain of 0.2% by the S&P 500, while the Dow Jones Industrial Average eased 0.3%. The blue chip gauge ended a streak of four straight days in which it marked new highs. According to Dow Jones Market Data, the S&P 500 marked a record daily close for the 54th session in 2024 so far.  
+The Nasdaq 100, which showcases the 100 largest nonfinancial companies on that exchange, rose 1.1%. That easily beat a gain of 0.2% by the S&P 500, while the Dow Jones Industrial Average eased 0.3%. The blue chip gauge ended a streak of four straight days in which it marked new highs. According to Dow Jones Market Data, the S&P 500 marked a record daily close for the 54th session in 2024 so far.  
+纳斯达克 100 指数上涨 1.1%，该指数展示了该交易所 100 家最大的非金融公司。这轻松击败了标准普尔 500 指数 0.2% 的涨幅，而道琼斯工业平均指数下跌了 0.3%。蓝筹股指标结束了连续四天创下新高的局面。根据道琼斯市场数据，标准普尔 500 指数创下 2024 年第 54 个交易日的日收盘纪录。
 
 
-The Russell 2000 continues to trade sideways, as it's done for days. On Monday, it gave up less than 1 point.  
+The Russell 2000 continues to trade sideways, as it's done for days. On Monday, it gave up less than 1 point.  
+罗素 2000 指数继续横盘整理，就像它已经做了几天一样。周一，它下降了不到 1 个百分点。
 
 
-Volume jumped sharply vs. Friday's half-day session. More importantly, as the Market Pulse shows, [distribution](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) remains limited. That signals fund managers across Wall Street are mostly in accumulation mode.  
+Volume jumped sharply vs. Friday's half-day session. More importantly, as the Market Pulse shows, [distribution](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/) remains limited. That signals fund managers across Wall Street are mostly in accumulation mode.  
+与周五的半日交易时段相比，成交量大幅跃升。更重要的是，正如 Market Pulse 所显示的那样，[分销](https://www.investors.com/how-to-invest/investors-corner/stock-market-timing-the-subtle-sign-of-market-tops/)仍然有限。这表明华尔街的基金经理大多处于积累模式。
 
 
-According to a MarketSurge daily chart, Monday's volume on the Nasdaq was just a touch below its average over the past 50 sessions.  
+According to a MarketSurge daily chart, Monday's volume on the Nasdaq was just a touch below its average over the past 50 sessions.  
+根据 MarketSurge 日线图，周一纳斯达克的成交量仅比过去 50 个交易日的平均水平低一点。
 
 
-Equal-weighted versions of the Nasdaq 100 also performed well on Monday. Direxion Nasdaq 100 Equal Weight ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) rose nearly 0.8% to 95.38. It posted an all-time high and has gained nearly 6% since the start of the fourth quarter.  
+Equal-weighted versions of the Nasdaq 100 also performed well on Monday. Direxion Nasdaq 100 Equal Weight ([QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)) rose nearly 0.8% to 95.38. It posted an all-time high and has gained nearly 6% since the start of the fourth quarter.  
+纳斯达克 100 指数的等权重版本周一也表现良好。Direxion 纳斯达克 100 等权重指数 （[QQQE](https://research.investors.com/quote.aspx?symbol=QQQE)） 上涨近 0.8% 至 95.38。它创下历史新高，自第四季度初以来已上涨近 6%。
 
 
-The equal-weight ETF has risen 12.7% for the year, so it continues to lag iShares Russell 2000 ([IWM](https://research.investors.com/quote.aspx?symbol=IWM)). The latter ETF is up 20.4% since Jan. 1.  
+The equal-weight ETF has risen 12.7% for the year, so it continues to lag iShares Russell 2000 ([IWM](https://research.investors.com/quote.aspx?symbol=IWM)). The latter ETF is up 20.4% since Jan. 1.  
+等权重 ETF 今年上涨了 12.7%，因此它继续落后于 iShares Russell 2000 （[IWM](https://research.investors.com/quote.aspx?symbol=IWM)）。后者 ETF 自 1 月 1 日以来上涨了 20.4%。
 
 
-Stock Market Internals
-----------------------
+Stock Market Internals 股票市场内部
+-----------------------------
 
 
-![](https://www.investors.com/wp-content/uploads/2024/12/MP120224-238x300.jpg)Breadth was negative on the NYSE, yet only mildly so.  
+![](https://www.investors.com/wp-content/uploads/2024/12/MP120224-238x300.jpg)Breadth was negative on the NYSE, yet only mildly so.  
+纽约证券交易所的广度为负值，但只是轻微的。
 
 
-Early data showed a 4-to-3 margin in favor of falling stocks vs. gainers. However, on the Nasdaq, breadth in fact improved as the day wore on. By day's end, winners nipped losers by 98 stocks, according to early data on Thinkorswim.  
+Early data showed a 4-to-3 margin in favor of falling stocks vs. gainers. However, on the Nasdaq, breadth in fact improved as the day wore on. By day's end, winners nipped losers by 98 stocks, according to early data on Thinkorswim.  
+早期数据显示，下跌的股票与上涨的股票相比，以 4 比 3 的差距获胜。然而，在纳斯达克，随着时间的推移，广度实际上有所改善。根据 Thinkorswim 的早期数据，截至当天收盘，赢家比输家少了 98 只股票。
 
 
-See the final statistics on the General Market Indicators page, found as a link at the bottom of every Big Picture column, or on the [Stock Market Today landing page](https://research.investors.com/markettrend.aspx).  
+See the final statistics on the General Market Indicators page, found as a link at the bottom of every Big Picture column, or on the [Stock Market Today landing page](https://research.investors.com/markettrend.aspx).  
+在“一般市场指标”页面上查看最终统计数据，该页面位于每个“全局”列的底部，或位于[“今日股市”登录页面](https://research.investors.com/markettrend.aspx)上。
 
 
-Plus, the [homepage of MarketSurge](https://marketsurge.investors.com/) showed 313 stocks up in volume vs. 227 down.  
+Plus, the [homepage of MarketSurge](https://marketsurge.investors.com/) showed 313 stocks up in volume vs. 227 down.  
+此外，[MarketSurge 的主页](https://marketsurge.investors.com/)显示 313 只股票成交量上涨，而 227 只股票下跌。
 
 
 [Looking at the IBD 50](https://leaderboard.investors.com/#/ibd50/full), however, this list of elite growth stocks does provide ample evidence that leadership in the stock market today is not purely the domain of the large or megacap firms.  
@@ -144,7 +154,7 @@ Google search engine parent **Alphabet** ([GOOGL](https://research.investors.com
 
 
 Alphabet needs more time and gains to set up a [new, strong breakout](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/).  
-Alphabet 需要更多的时间和收益来建立[一个新的、强大的突破](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/)。
+Alphabet 需要更多的时间和收益来建立[一个新的、强劲的突破](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/)。
 
 
 As the history of Wall Street and the U.S. economy has shown, investors need to be mindful of regulatory risk.  
@@ -152,7 +162,7 @@ As the history of Wall Street and the U.S. economy has shown, investors need to 
 
 
 On Nov. 28, Canada's antitrust watchdog, the Competition Bureau, alleged that Alphabet acted unlawfully in building market share in the online ads market. The bureau seeks to "put a decisive end to Google's structural dominance and anticompetitive practice," The Wall Street Journal reported. The report followed a sell-off that took place in Alphabet shares on Nov. 21 following news that the U.S. Department of Justice wants Google to divest its Chrome browser, citing its monopoly position in online search.  
-11 月 28 日，加拿大反垄断监管机构竞争局 （Competition Bureau） 指控 Alphabet 在在线广告市场建立市场份额方面存在非法行为。据《华尔街日报》报道，该局寻求“决定性地结束谷歌的结构性主导地位和反竞争做法”。该报告是在 11 月 21 日有消息称美国司法部希望谷歌剥离其 Chrome 浏览器后，Alphabet 股票发生抛售，理由是其在在线搜索领域的垄断地位。
+11 月 28 日，加拿大反垄断监管机构竞争局 （Competition Bureau） 指控 Alphabet 在在线广告市场建立市场份额方面存在非法行为。据《华尔街日报》报道，该局寻求“决定性地结束谷歌的结构性主导地位和反竞争做法”。该报告是在 11 月 21 日美国司法部希望谷歌剥离其 Chrome 浏览器的消息后发生的抛售之后发布的，理由是其在在线搜索领域的垄断地位。
 
 
 "At the end of the day, Morningstar does not think Chrome will be required to be divested. Even if we get to that point, we're still a number of years away from that even potentially occurring," Dave Sekera, U.S. market strategist at **Morningstar** ([MORN](https://research.investors.com/quote.aspx?symbol=MORN)), wrote in weekly comments sent to IBD.  
