--- a/_columns/The_Big_Picture/zh-cn/2024-11-27.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-27.md
@@ -135,7 +135,7 @@ Bond traders [raised the odds](https://www.cmegroup.com/markets/interest-rates/c
 
 
 "Given the broad consensus-like reading across the slew of economic data releases today, we do not see any meaningful impact on the Fed's upcoming rate decision in December," Greg Wilensky, head of U.S. Fixed Income at Janus Henderson Investors, said in a report to clients.  
-“鉴于今天发布的一系列经济数据普遍一致，我们认为美联储即将在12月做出的利率决定不会受到任何有意义的影响，”骏利亨德森投资美国固定收益主管Greg Wilensky在给客户的一份报告中表示。
+“鉴于今天发布的一系列经济数据的广泛共识，我们认为不会对美联储即将在12月做出的利率决定产生任何有意义的影响，”骏利亨德森投资美国固定收益主管Greg Wilensky在给客户的一份报告中表示。
 
 
 "We still believe that a 25-basis point reduction to the policy rate is extremely likely. We feel the odds of a cut are still higher than the 70% currently implied in the futures market. In our view, it will take a combination of a very strong NFP (nonfarm payrolls) print and a higher than expected core CPI release to cause a pause at the December meeting."  
