--- a/_columns/The_Big_Picture/zh-cn/2024-11-29.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-29.md
@@ -21,7 +21,7 @@ The Nasdaq composite ended Friday's shortened session up 0.8%. This allowed the 
 
 
 The S&P 500 closed at record highs after ending the session up 0.6%. Its weekly lift came in at 1.1%, which helped escalate it 5.7% for the month. It notched its best monthly improvement since November 2023. The benchmark index is clear of all its moving averages and is now up 26.5% in 2024.  
-标准普尔 500 指数收盘上涨 0.6% 后收于历史高位。其每周涨幅为 1.1%，这帮助其当月上涨了 5.7%。它创下了自 2023 年 11 月以来的最佳月度涨幅。该基准指数清除了所有移动平均线，目前在 2024 年上涨了 26.5%。
+标准普尔 500 指数收盘上涨 0.6% 后收于历史高位。其每周增长为 1.1%，这帮助其当月上涨了 5.7%。它创下了自 2023 年 11 月以来的最佳月度涨幅。该基准指数清除了所有移动平均线，目前在 2024 年上涨了 26.5%。
 
 
 Advancers led decliners by almost 2-to-1 on both the New York Stock Exchange and the Nasdaq. Volume was lower on both exchanges due to the truncated trading day.  
