--- a/_columns/The_Big_Picture/zh-cn/2024-12-02.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-02.md
@@ -154,7 +154,7 @@ Google search engine parent **Alphabet** ([GOOGL](https://research.investors.com
 
 
 Alphabet needs more time and gains to set up a [new, strong breakout](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/).  
-Alphabet 需要更多的时间和收益来建立[一个新的、强劲的突破](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/)。
+Alphabet 需要更多的时间和收益来建立[一个新的、强大的突破](https://www.investors.com/how-to-invest/investors-corner/what-is-stock-breakout/)。
 
 
 As the history of Wall Street and the U.S. economy has shown, investors need to be mindful of regulatory risk.  
@@ -162,7 +162,7 @@ As the history of Wall Street and the U.S. economy has shown, investors need to 
 
 
 On Nov. 28, Canada's antitrust watchdog, the Competition Bureau, alleged that Alphabet acted unlawfully in building market share in the online ads market. The bureau seeks to "put a decisive end to Google's structural dominance and anticompetitive practice," The Wall Street Journal reported. The report followed a sell-off that took place in Alphabet shares on Nov. 21 following news that the U.S. Department of Justice wants Google to divest its Chrome browser, citing its monopoly position in online search.  
-11 月 28 日，加拿大反垄断监管机构竞争局 （Competition Bureau） 指控 Alphabet 在在线广告市场建立市场份额方面存在非法行为。据《华尔街日报》报道，该局寻求“决定性地结束谷歌的结构性主导地位和反竞争做法”。该报告是在 11 月 21 日美国司法部希望谷歌剥离其 Chrome 浏览器的消息后发生的抛售之后发布的，理由是其在在线搜索领域的垄断地位。
+11 月 28 日，加拿大反垄断监管机构竞争局 （Competition Bureau） 指控 Alphabet 在在线广告市场建立市场份额方面存在非法行为。据《华尔街日报》报道，该局寻求“决定性地结束谷歌的结构性主导地位和反竞争做法”。该报告是在 11 月 21 日有消息称美国司法部希望谷歌剥离其 Chrome 浏览器后，Alphabet 股票发生抛售，理由是其在在线搜索领域的垄断地位。
 
 
 "At the end of the day, Morningstar does not think Chrome will be required to be divested. Even if we get to that point, we're still a number of years away from that even potentially occurring," Dave Sekera, U.S. market strategist at **Morningstar** ([MORN](https://research.investors.com/quote.aspx?symbol=MORN)), wrote in weekly comments sent to IBD.  
