--- a/_columns/The_Big_Picture/zh-cn/2024-12-03.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-03.md
@@ -37,7 +37,7 @@ Stock Market Today 今日股市
 
 
 Some buying near the close helped lift the Nasdaq composite to a gain of 0.4% as leading growth stocks like **Astera Labs** ([ALAB](https://research.investors.com/quote.aspx?symbol=ALAB)), **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)) and **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)) ended with gains ranging from 7% to 12%.  
-收盘前的一些买盘帮助纳斯达克综合指数上涨 0.4%，因为 **Astera Labs** （[ALAB）、](https://research.investors.com/quote.aspx?symbol=ALAB)**AppLovin** （[APP](https://research.investors.com/quote.aspx?symbol=APP)） 和 **Palantir Technologies** （[PLTR）](https://research.investors.com/quote.aspx?symbol=PLTR) 等领先成长型股票收盘上涨 7% 至 12%。
+收盘前的一些买盘帮助纳斯达克综合指数上涨 0.4%，因为 **Astera Labs** （[ALAB）、](https://research.investors.com/quote.aspx?symbol=ALAB)**AppLovin** （[APP](https://research.investors.com/quote.aspx?symbol=APP)） 和 **Palantir Technologies** （[PLTR）](https://research.investors.com/quote.aspx?symbol=PLTR) 等领先成长股收盘上涨 7% 至 12%。
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/12/MP120324.jpg)
