--- a/_columns/The_Big_Picture/zh-cn/2024-12-03.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-12-03.md
@@ -37,7 +37,7 @@ Stock Market Today 今日股市
 
 
 Some buying near the close helped lift the Nasdaq composite to a gain of 0.4% as leading growth stocks like **Astera Labs** ([ALAB](https://research.investors.com/quote.aspx?symbol=ALAB)), **AppLovin** ([APP](https://research.investors.com/quote.aspx?symbol=APP)) and **Palantir Technologies** ([PLTR](https://research.investors.com/quote.aspx?symbol=PLTR)) ended with gains ranging from 7% to 12%.  
-收盘前的一些买盘帮助纳斯达克综合指数上涨 0.4%，因为 **Astera Labs** （[ALAB）、](https://research.investors.com/quote.aspx?symbol=ALAB)**AppLovin** （[APP](https://research.investors.com/quote.aspx?symbol=APP)） 和 **Palantir Technologies** （[PLTR）](https://research.investors.com/quote.aspx?symbol=PLTR) 等领先成长股收盘上涨 7% 至 12%。
+收盘前的一些买盘帮助纳斯达克综合指数上涨 0.4%，因为 **Astera Labs** （[ALAB）、](https://research.investors.com/quote.aspx?symbol=ALAB)**AppLovin** （[APP](https://research.investors.com/quote.aspx?symbol=APP)） 和 **Palantir Technologies** （[PLTR）](https://research.investors.com/quote.aspx?symbol=PLTR) 等领先成长型股票收盘上涨 7% 至 12%。
 
 
 ![](https://www.investors.com/wp-content/uploads/2024/12/MP120324.jpg)
@@ -117,31 +117,25 @@ In the semiconductor sector, chip foundry **Taiwan Semiconductor** ([TSM](https:
 在此处查看一般市场指标图表页面。](https://www.investors.com/wp-content/uploads/2024/12/DailyGMI_120324.pdf)
 
 
-*Follow Ken Shreve on Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) for more stock market analysis and insight*.  
-*在 Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) 上关注 Ken Shreve，了解更多股市分析和见解*。
+*Follow Ken Shreve on Twitter [@IBD\_KShreve](https://www.twitter.com/IBD_KShreve) for more stock market analysis and insight*.  
 
 
-**YOU MAY ALSO LIKE: 您可能还喜欢：**
+**YOU MAY ALSO LIKE:** 
 
 
-[AI 'Inflection Point': IPO Leader Surges On Blowout Guidance  
-人工智能的“拐点”：IPO 领导者因井喷指引而飙升](https://www.investors.com/news/technology/credo-stock-credo-earnings-ai-inflection-point/)
+[AI 'Inflection Point': IPO Leader Surges On Blowout Guidance](https://www.investors.com/news/technology/credo-stock-credo-earnings-ai-inflection-point/) 
 
 
-[Top Growth Stocks To Buy And Watch  
-最值得购买和关注的成长型股票](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/)
+[Top Growth Stocks To Buy And Watch](https://www.investors.com/stock-lists/stocks-to-watch-top-rated-ipos-big-caps-and-growth-stocks/) 
 
 
-[Learn How To Time The Market With IBD's ETF Market Strategy  
-了解如何使用 IBD 的 ETF 市场策略把握市场时机](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/)
+[Learn How To Time The Market With IBD's ETF Market Strategy](https://www.investors.com/market-trend/ibds-etf-market-strategy/ibds-etf-market-strategy/) 
 
 
-[Find The Best Long-Term Investments With IBD Long-Term Leaders  
-与 IBD 长期领导者一起寻找最佳长期投资](https://www.investors.com/research/ibd-long-term-leaders-screen)
+[Find The Best Long-Term Investments With IBD Long-Term Leaders](https://www.investors.com/research/ibd-long-term-leaders-screen) 
 
 
-[Futures Rise On These Earnings Winners; Three Hot AI Stocks  
-这些收益赢家的期货上涨;三大热门 AI 股票](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-salesforce-earnings-meta-palantir-credo-shine/)
+[Futures Rise On These Earnings Winners; Three Hot AI Stocks](https://www.investors.com/market-trend/stock-market-today/dow-jones-futures-salesforce-earnings-meta-palantir-credo-shine/) 
 
 
 
