--- a/_columns/The_Big_Picture/zh-cn/2024-11-27.md
+++ b/_columns/The_Big_Picture/zh-cn/2024-11-27.md
@@ -113,11 +113,11 @@ The Fed tends to put more weight on core PCE, which removes food and energy pric
 
 
 Initial claims for unemployment benefits stayed at [213,000 the most recent week](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top), below the 217,000 estimate culled by Econoday. The revised [third-quarter GDP climbed 2.8%](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits), same as in the initial estimate and equal with forecasts.  
-最近一周初请失业金人数保持在 [213,000](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top) 人，低于 Econoday 估计的 217,000 人。修正后的[第三季度 GDP 增长 2.8%，](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits)与初步估计相同，与预测持平。
+最近一周初请失业金人数保持在 [213,000](https://ibd.econoday.com/byevent?fid=591316&year=2024&lid=0#top) 人，低于 Econoday 估计的 217,000 人。修正后的[第三季度 GDP 增长 2.8%，](https://www.bea.gov/news/2024/gross-domestic-product-third-quarter-2024-second-estimate-and-corporate-profits)与初步估计相同，与预测相同。
 
 
 Bond traders [raised the odds](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html) of a quarter-point rate cut at the Fed's December meeting to 70% vs. about 60% on Tuesday. Those odds crept higher the past week.  
-债券交易员将美联储 12 月会议上降息 25 个基点的[几率提高](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)到 70%，而周二的概率约为 60%。过去一周，这些赔率逐渐上升。
+债券交易员将美联储 12 月会议上降息 25 个基点[的几率提高](https://www.cmegroup.com/markets/interest-rates/cme-fedwatch-tool.html?redirect=/trading/interest-rates/fed-funds.html)到 70%，而周二的概率约为 60%。过去一周，这些赔率逐渐上升。
 
 
 
@@ -135,7 +135,7 @@ Bond traders [raised the odds](https://www.cmegroup.com/markets/interest-rates/c
 
 
 "Given the broad consensus-like reading across the slew of economic data releases today, we do not see any meaningful impact on the Fed's upcoming rate decision in December," Greg Wilensky, head of U.S. Fixed Income at Janus Henderson Investors, said in a report to clients.  
-“鉴于今天发布的一系列经济数据的广泛共识，我们认为不会对美联储即将在12月做出的利率决定产生任何有意义的影响，”骏利亨德森投资美国固定收益主管Greg Wilensky在给客户的一份报告中表示。
+“鉴于今天发布的一系列经济数据普遍一致，我们认为美联储即将在12月做出的利率决定不会受到任何有意义的影响，”骏利亨德森投资美国固定收益主管Greg Wilensky在给客户的一份报告中表示。
 
 
 "We still believe that a 25-basis point reduction to the policy rate is extremely likely. We feel the odds of a cut are still higher than the 70% currently implied in the futures market. In our view, it will take a combination of a very strong NFP (nonfarm payrolls) print and a higher than expected core CPI release to cause a pause at the December meeting."  
